# EGO1-Witch

./: #DOCUMENTATION#.md  README.md  colision.py  ego1witch.py  pyproject.toml  shooting bullet.py  sprite.py  window_display.py
.github/workflows/: publish.yaml
documentation/: #DOCUMENTATION#.md  README.txt
gamepack/: LICENSE.txt  README.md  setup.py
logo/: splotch.kra  splotch.png~  splotch2.kra
tutorialandobjs/: __init__.py  movement.py
